<resources>
    <string name="app_name">FoolAroundMaterialDesign</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_logout">Logout</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="signup_text">Sign up</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="sign_button_label">Sign up</string>
    <string name="welcome_label">Welcome to Fool Around</string>
    <string name="signup_button_label">Sign up</string>
    <string name="email_hint">Email address</string>
    <string name="signup_error_title">Signup Error</string>
    <string name="signup_error_message">You must provide user name, password and email address to signup.</string>
    <string name="login_error_title">Login Error</string>
    <string name="signup_login_message">You must provide your user name and password to login.</string>
    <string name="empty_friends_label">Add friends to begin</string>
    <string name="empty_messages_label">No new messages</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">Error</string>
    <string name="action_camera">Camera</string>
    <string name="action_camera_choices">Select a camera choice</string>
    <string name="choose_camera_choices">Choose</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recepients">Choose Recepients</string>
    <string name="item_title">Placeholder title</string>
    <string name="item_desc">Placeholder description.
    </string>
    <string name="title_activity_view_image">ViewImageActivity</string>
</resources>
